deploy/k8s/20-product-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-catalog
  namespace: shop
  labels:
    app: product-catalog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-catalog
  template:
    metadata:
      labels:
        app: product-catalog
    spec:
      containers:
        - name: product-catalog
          image: webinar-demo/product-catalog:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8081
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: product-catalog
  namespace: shop
spec:
  type: ClusterIP
  selector:
    app: product-catalog
  ports:
    - port: 8081
      targetPort: 8081
