deploy/k8s/22-payment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment
  namespace: shop
  labels:
    app: payment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment
  template:
    metadata:
      labels:
        app: payment
    spec:
      containers:
        - name: payment
          image: webinar-demo/payment:dev
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8084
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8084
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /healthz
              port: 8084
            initialDelaySeconds: 30
            periodSeconds: 15
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: payment
  namespace: shop
spec:
  type: ClusterIP
  selector:
    app: payment
  ports:
    - port: 8084
      targetPort: 8084
